Fix/safari transition flicker (#138)
* fix(safari): prevent flickering on transitions

* fix(safari): add swiper-wrapper fix

* fix(stylelint): disable property-no-vendor-prefix

--- a/styles/includes/_offering.scss
+++ b/styles/includes/_offering.scss
@@ -24,6 +24,8 @@
 		line-height: 120%;
 		white-space: nowrap;
 		transition: transform 500ms ease;
+		-webkit-transform-style: preserve-3d;
+		-webkit-backface-visibility: hidden;
 
 		@include bp-xs() {
 			font-size: 6rem;
