--- a/styles/includes/_slider.scss
+++ b/styles/includes/_slider.scss
@@ -26,6 +26,8 @@
 
 		img {
 			width: 100%;
+			-webkit-transform-style: preserve-3d;
+			-webkit-backface-visibility: hidden;
 		}
 
 		.swiper-slide {
@@ -35,5 +37,10 @@
 				width: 70vw;
 			}
 		}
+	}
+
+	.swiper-wrapper {
+		-webkit-transform-style: preserve-3d;
+		-webkit-backface-visibility: hidden;
 	}
 }
